--- a/src/main/webapp/css/project.css
+++ b/src/main/webapp/css/project.css
@@ -1,99 +1,64 @@
-@charset "UTF-8";
+/*@charset "UTF-8";*/
 
-body {
-	font-family: 'Arial', sans-serif;
-	background-color: #f4f4f4;
-	line-height: 1.6;
-}
+/** {*/
+/*	text-align: center;*/
+/*}*/
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+/*a {*/
+/*	text-decoration: none;*/
+/*}*/
 
-a {
-	text-decoration: none;
-	color: #007BFF;
-	transition: color 0.3s;
-}
+/*li {*/
+/*	list-style: none;*/
+/*	float: left;*/
+/*	padding: 15px;*/
+/*	border-radius: 50px 0 50px 0;*/
+/*}*/
+/*!*li:first-child{*/
+/*	border-radius: 50px 0 50px 0;*/
+/*}*/
+/*li:last-child{*/
+/*	border-radius: 0 50px 0 50px;*/
+/*}*!*/
+/*li:nth-child(2n){*/
+/*	background: pink;*/
+/*}*/
+/*li:nth-child(2n+1){*/
+/*	background: orange;*/
+/*}*/
 
-a:hover {
-	color: #0056b3;
-}
+/*#total {*/
+/*	width: 800px;*/
+/*	height: 800px;*/
+/*	color: blue;*/
+/*	font: 25px 궁서 bold;*/
+/*	background-image: url("../img/back.png");*/
+/*}*/
 
-li {
-	list-style: none;
-	padding: 10px 20px;
-	border-radius: 50px;
-	transition: background-color 0.3s, color 0.3s;
-}
+/*#top {*/
+/*	width: 800px;*/
+/*	height: 70px;*/
+/*	background: lime;*/
+/*}*/
 
-li:hover {
-	background-color: #0056b3;
-	color: white;
-}
+/*#top2 {*/
+/*	width: 250px;*/
+/*	height: 300px;*/
+/*	background: black;*/
+/*	color: yellow;*/
+/*	position: fixed;*/
+/*	top: 5px;*/
+/*	right: 5px;*/
+/*	border-radius: 300px 100px 300px 100px;*/
+/*	*/
+/*}*/
 
-li:nth-child(2n) {
-	background-color: #FFC0CB;
-}
-
-li:nth-child(2n+1) {
-	background-color: #FFA500;
-}
-
-#total {
-	max-width: 900px;
-	margin: 50px auto;
-	padding: 30px;
-	border-radius: 10px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
-	background-color: white;
-	background-size: cover;
-	background-position: center;
-}
+/*#center {*/
+/*	width: 800px;*/
+/*	height: 700px;*/
+/*}*/
 
 
-#center {
-	width: 100%;
-	padding: 30px;
-	border-radius: 10px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08);
-	background-color: white;
-}
 
-.btn {
-	padding: 15px 30px;
-	border: none;
-	border-radius: 10px;
-	font-weight: bold;
-	background-color: #007BFF;
-	color: white;
-	cursor: pointer;
-	transition: background-color 0.3s, box-shadow 0.3s;
-}
 
-.btn:hover {
-	background-color: #0056b3;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-}
 
-.table {
-	width: 100%;
-	margin: 30px 0;
-	border-collapse: collapse;
-}
-
-.table th, .table td {
-	padding: 20px;
-	border: 1px solid #ddd;
-	text-align: left;
-}
-
-.table tr:nth-child(even) {
-	background-color: #f9f9f9;
-}
-
-.table tr:hover {
-	background-color: #eee;
-}
